--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "eslint": "^5.16.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-router": "^4.3.1",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "3.0.1"
   },
   "scripts": {
