--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@material-ui/icons": "^4.0.1",
     "eslint": "^5.16.0",
     "react": "^16.8.6",
+    "react-card-flip": "^0.7.1",
     "react-dom": "^16.8.6",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
