Added sign in capabilities with AWS

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "dependencies": {
         "@material-ui/core": "^4.0.2",
         "@material-ui/icons": "^4.0.1",
+        "aws-amplify": "^1.1.28",
         "eslint": "^5.16.0",
         "react": "^16.8.6",
         "react-card-flip": "^0.7.1",
