--- a/package.json
+++ b/package.json
@@ -6,13 +6,15 @@
         "@material-ui/core": "^4.2.0",
         "@material-ui/icons": "^4.2.1",
         "aws-amplify": "^1.1.30",
+        "babel-preset-react-app": "^9.0.1",
         "eslint": "^5.16.0",
         "react": "^16.8.6",
         "react-card-flip": "^0.7.2",
         "react-dom": "^16.8.6",
         "react-router": "^4.3.1",
         "react-router-dom": "^4.3.1",
-        "react-scripts": "3.0.1"
+        "react-scripts": "3.0.1",
+        "react-sweet-progress": "^1.1.2"
     },
     "scripts": {
         "start": "react-scripts start",
