--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
         "@material-ui/core": "^4.2.0",
         "@material-ui/icons": "^4.2.1",
         "aws-amplify": "^1.1.30",
+        "aws-amplify-react": "^2.4.4",
         "babel-preset-react-app": "^9.0.1",
         "eslint": "^5.16.0",
         "react": "^16.8.6",
