--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
         "react-router": "^4.3.1",
         "react-router-dom": "^4.3.1",
         "react-scripts": "3.0.1",
-        "react-sweet-progress": "^1.1.2"
+        "react-sweet-progress": "^1.1.2",
+        "react-toastify": "^5.4.0",
+        "react-tooltip": "^3.11.1"
     },
     "scripts": {
         "start": "react-scripts start",
