--- a/package.json
+++ b/package.json
@@ -9,15 +9,16 @@
         "aws-amplify-react": "^2.4.4",
         "babel-preset-react-app": "^9.0.1",
         "eslint": "^5.16.0",
-        "react": "^16.8.6",
+        "react": "^16.13.0",
         "react-card-flip": "^0.7.2",
-        "react-dom": "^16.8.6",
+        "react-dom": "^16.13.0",
         "react-router": "^4.3.1",
         "react-router-dom": "^4.3.1",
         "react-scripts": "3.0.1",
         "react-sweet-progress": "^1.1.2",
         "react-toastify": "^5.4.0",
-        "react-tooltip": "^3.11.1"
+        "react-tooltip": "^3.11.1",
+        "reactstrap": "^8.4.1"
     },
     "scripts": {
         "start": "react-scripts start",
